# dnd-buddy-desktop

./: package-lock.json  package.json  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-07-14-225839_create_characters/: up.sql
src-tauri/migrations/2023-07-14-234214_create_campaigns/: down.sql  up.sql
src-tauri/migrations/2023-07-14-234534_create_campaign_notes/: down.sql  up.sql
src-tauri/migrations/2023-07-14-234755_create_encounters/: down.sql  up.sql
src-tauri/migrations/2023-07-15-164328_create_entities/: down.sql  up.sql
src-tauri/migrations/2023-07-15-164828_create_items/: up.sql
src-tauri/migrations/2023-07-15-165028_create_chatgpt_requests/: down.sql  up.sql
src-tauri/migrations/2023-07-15-165234_create_chatgpt_response/: down.sql  up.sql
src-tauri/migrations/2023-07-15-165515_create_usages/: down.sql  up.sql
src-tauri/migrations/2023-07-15-165703_create_messages/: up.sql
src-tauri/migrations/2023-07-15-165801_create_choices/: down.sql  up.sql
src-tauri/src/: config.rs  lib.rs  main.rs  schema.rs
src-tauri/src/controllers/: mod.rs
src-tauri/src/controllers/campaigns/: campaign_notes.rs  mod.rs
src-tauri/src/controllers/character/: mod.rs
src-tauri/src/controllers/characters/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/models/campaigns/: campaign_notes.rs  campaigns.rs  mod.rs
src-tauri/src/models/character/: mod.rs
src-tauri/src/models/characters/: mod.rs
src-tauri/src/models/chatgpt/: chat_gpt_requests.rs  chat_gpt_responses.rs  choices.rs  messages.rs  mod.rs  usages.rs
(+61 files in other folders)
