[package]
name = "dnd-buddy-desktop"
version = "0.0.1"
description = "A DnD Campaign Organizer"
authors = ["Solomon Lambert"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
diesel = { version = "2.1.0", features = ["sqlite", "serde_json"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
fast_log = "1.5.55"
log = "0.4.19"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
